@@ -277,6 +277,7 @@ void usage()
 	     << "\t\t-ac\t- output an automatically generated comment" << endl
 	     << "\t\t-uc\t- output an automatically generated useless comment" << endl
 	     << "\t\t\t  in addition to the -f format" << endl
+	     << "\t\t-dbg\t- output debugging information if present in USECODE." << endl
 	     << "\tGame Specifier Flags (only one of these):" << endl
 	     << "\t\t-bg\t- select the black gate usecode file" << endl
 	     << "\t\t-si\t- select the serpent isle usecode file" << endl
